# felix

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bochs.conf  boot-link.ld  build.rs  build.sh  bx_enh_dbg.ini  dante  data.txt  debug.sh  debug_nasm.sh  debug_rust.sh  disk.layout  lorem  pacciani  rust-toolchain.toml  start.sh  test2  test2.txt  x86_16-felix.json  x86_32-felix.json
.cargo/: config.toml
.github/workflows/: docker-image.yml  docker.yml  rust.yml
apps/atest/: Cargo.toml  linker.ld
apps/atest/src/: main.rs
apps/btest/: Cargo.toml  build.rs
apps/btest/src/: main.rs
apps/ctest/: Cargo.toml
apps/ctest/src/: main.rs
apps/hello/: Cargo.toml  linker.ld
apps/hello/src/: main.rs
boot/: Cargo.toml  build.rs  linker.ld
boot/src/: boot.asm  disk.rs  main.rs
bootloader/: Cargo.toml  build.rs  linker.ld
bootloader/src/: boot.asm  dap.rs  disk.rs  fat.rs  gdt.rs  header.asm  main.rs  print.asm  print.rs  splash.rs  stage2.asm
disk/: disk.rs  fat.rs
kernel/: Cargo.toml  linker.ld
kernel/src/: disk.rs  exceptions.asm  exceptions.rs  fat.rs  idt.rs  keyboard.rs  main.rs  paging.rs  pic.rs  print.rs  shell.rs  task.rs  timer.rs  tss.rs
kernel/src/drivers/: disk.rs  keyboard.rs  mod.rs  pic.rs
kernel/src/filesystem/: fat.rs  mod.rs
kernel/src/interrupts/: exceptions.rs  (+5 more)
lib/: Cargo.toml
lib/print/: Cargo.toml
lib/src/: lib.rs  mutex.rs
lib/stdio/: Cargo.toml
src/: main.asm  main.rs  main.s
src/bootloader/: boot.asm  boot.s  disk.asm  header.asm  print.asm  stage1.asm
src/kernel/: main.asm
(+12 files in other folders)
