[workspace]
members = ["boot", "bootloader", "kernel"]

[workspace.package]
version = "0.1.0"
authors = ["Gianmatteo Palmieri <mail@gian.im>"]
edition = "2021"

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 2

[profile.dev.package.felix-boot]
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = false

[profile.dev.release.felix-boot]
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = false
