[workspace]
members = ["boot", "bootloader", "kernel", "apps/hello", "lib/stdio"]

[workspace.package]
version = "0.3.1"
authors = ["Gianmatteo Palmieri <mail@gian.im>"]
edition = "2021"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 1

[profile.dev.package.felix-boot]
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = false

[profile.release.package.felix-boot]
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = false
